# devmate

./: .gitignore  Dockerfile  README.md  checklist.md  docker-compose.yml  pyproject.toml
docs/: internal_frontend_guidelines.md  internal_project_guidelines.md
examples/skills/hello-anthropic-style/: SKILL.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: index.ts
frontend/src/components/: AgentFlow.tsx  FileManager.tsx
frontend/src/styles/: App.css
frontend/src/types/: index.ts
src/devmate/: __init__.py  agent.py  api.py  cli.py  config.py  llm.py  logging_setup.py  mcp_client.py  mcp_server.py  rag.py  skill_learning.py  skills.py  skills_paths.py  skills_verify.py
src/devmate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
