[project]
name = "devmate"
version = "0.1.0"
description = "AI coding assistant with MCP (Streamable HTTP), RAG, and Agent Skills"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "langchain>=1.2.10",
  "langchain-openai",
  "langchain-deepseek>=1.0.1",
  "langchain-classic>=1.0.0",
  "langgraph>=0.2.0",
  "langchain-text-splitters",
  "langchain-mcp-adapters",
  "qdrant-client>=1.10.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "langchain-skills-adapter>=0.1.2",
  "pydantic>=2.0.0",
  "tomlkit>=0.13.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
devmate = "devmate.cli:main"
devmate-mcp-search = "devmate.mcp_server:main"
devmate-rag-ingest = "devmate.rag:ingest_main"
devmate-api = "devmate.api:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["devmate*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

